--- a/libcom/main/static/css/custom.css
+++ b/libcom/main/static/css/custom.css
@@ -6,3 +6,8 @@
         max-height: 50px;
         height: auto;
     }
+
+.profile-photo {
+        max-height: 50px;
+        height: auto;
+    }
