--- a/libcom/main/templates/main/layout.html
+++ b/libcom/main/templates/main/layout.html
@@ -20,17 +20,17 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="{% static 'main/logo.svg' %}" alt="brand-logo" class="logo"></a>
+        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'main/logo.svg' %}" alt="brand-logo" class="logo"></a>
         <div class="mx-auto">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Поиск книг</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'search' %}">Поиск книг</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Мои книги</a>
+                    <a class="nav-link active" href="{% url 'mybooks' %}">Мои книги</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">О нас</a>
+                    <a class="nav-link active" href="{% url 'about' %}">О нас</a>
                 </li>
             </ul>
         </div>
@@ -39,6 +39,9 @@
         </div>
     </div>
 </nav>
+
+{% block content %} {% endblock %}
+
 
 </body>
 </html>
