--- a/libcom/main/templates/main/user-default.html
+++ b/libcom/main/templates/main/user-default.html
@@ -1,4 +1,5 @@
 {% load static %}
-<button type="button" class="btn btn-outline-primary">
+<button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#loginModal">
     Войти
 </button>
+{% include 'main/sign-up-form.html' %}
