--- a/libcom/main/templates/main/user-info.html
+++ b/libcom/main/templates/main/user-info.html
@@ -2,13 +2,14 @@
 <ul class="navbar-nav mr-auto">
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Account
+            {{ user.last_name }}
+            {{ user.first_name }}
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Войти</a>
+            <a class="dropdown-item" href="#">Настройки</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Зарегистрироваться</a>
+            <a class="dropdown-item" href="#">Выйти</a>
         </div>
     </li>
 </ul>
-<img src="{% static 'main/person-default.png' %}">
+<img src="{% static 'main/person-default.png' %}" class="profile-photo">
