--- a/libcom/main/templates/main/layout.html
+++ b/libcom/main/templates/main/layout.html
@@ -35,7 +35,11 @@
             </ul>
         </div>
         <div class="d-flex align-items-center">
-            {% block user-info %} {% endblock %}
+            {% if user.is_authenticated %}
+                {% include 'main/user-info.html' %}
+            {% else %}
+                {% include 'main/user-default.html' %}
+             {% endif %}
         </div>
     </div>
 </nav>
