--- a/libcom/main/templates/main/user-default.html
+++ b/libcom/main/templates/main/user-default.html
@@ -2,4 +2,4 @@
 <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#loginModal">
     Войти
 </button>
-{% include 'main/sign-up-form.html' %}
+{% include 'main/user-form.html' %}
