--- a/libcom/main/templates/main/user-info.html
+++ b/libcom/main/templates/main/user-info.html
@@ -8,7 +8,7 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">Настройки</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Выйти</a>
+            <a class="dropdown-item" href="users/logout">Выйти</a>
         </div>
     </li>
 </ul>
