--- a/libcom/main/templates/main/layout.html
+++ b/libcom/main/templates/main/layout.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="h-100" data-bs-theme="auto">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+    <meta name="author" content="Maria Vasileva" />
     <title>{% block title %}{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css">
-    <link rel="stylesheet" href="{% static 'css/custom.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -17,35 +19,53 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- font-family: 'Nunito', sans-serif; -->
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'main/logo.svg' %}" alt="brand-logo" class="logo"></a>
-        <div class="mx-auto">
-            <ul class="navbar-nav">
+<body class="d-flex h-100">
+    <div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
+      <header class="mb-auto">
+        <nav
+          id="book-nav"
+          class="navbar navbar-expand-lg"
+          aria-label="Thirteenth navbar example"
+        >
+          <div class="container-fluid">
+            <div
+              class="collapse navbar-collapse d-lg-flex justify-content-between"
+              id="navbarsExample11"
+            >
+              <a class="navbar-brand" href="{% url 'home' %}">
+                <img src="{% static 'main/logo.svg' %}" alt="Logo" width="80" height="80" />
+              </a>
+              <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'search' %}">Поиск книг</a>
+                  <a class="nav-link" href="{% url 'home' %}"
+                    >Поиск книг</a
+                  >
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'mybooks' %}">Мои книги</a>
+                  <a class="nav-link" href="{% url 'mybooks:index' %}">Мои книги</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'about' %}">О нас</a>
+                  <a class="nav-link" href="{% url 'about' %}">О нас</a>
                 </li>
-            </ul>
-        </div>
-        <div class="d-flex align-items-center">
-            {% if user.is_authenticated %}
-                {% include 'main/user-info.html' %}
-            {% else %}
-                {% include 'main/user-default.html' %}
-             {% endif %}
-        </div>
+              </ul>
+
+              <div class="d-flex align-items-center gap-3">
+                {% if user.is_authenticated %}
+                    {% include 'main/user-info.html' %}
+                {% else %}
+                    {% include 'main/user-default.html' %}
+                {% endif %}
+              </div>
+            </div>
+          </div>
+        </nav>
+      </header>
+
+    {% block content %} {% endblock %}
     </div>
-</nav>
-
-{% block content %} {% endblock %}
-
-
+<script src="{% static 'bootstrap/css/bootstrap.min.js' %}"></script>
 </body>
 </html>
+
+
+
