--- a/libcom/main/templates/main/user-form.html
+++ b/libcom/main/templates/main/user-form.html
@@ -40,9 +40,8 @@
                               </div>
                             {% endfor %}
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                              <input type="submit" value="Войти" class="btn btn-primary me-md-2">
+                              <input type="submit" value="Войти" class="btn user-btn">
                             </div>
-                            <input type="hidden" name="action" value="login">
                         </form>
                     </div>
 
@@ -62,7 +61,7 @@
                               </div>
                             {% endfor %}
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                              <input type="submit" value="Зарегистрироваться" class="btn btn-primary me-md-2">
+                              <input type="submit" value="Зарегистрироваться" class="btn user-btn">
                             </div>
 
                         </form>
