--- a/libcom/main/templates/main/user-default.html
+++ b/libcom/main/templates/main/user-default.html
@@ -1,5 +1,5 @@
 {% load static %}
-<button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#loginModal">
+<button type="button" class="btn user-btn" data-toggle="modal" data-target="#loginModal">
     Войти
 </button>
 {% include 'main/user-form.html' %}
