--- a/libcom/mybooks/templates/mybooks/index.html
+++ b/libcom/mybooks/templates/mybooks/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'main/layout.html' %}
+
+{% block title %} Libcommend {% endblock %}
+
+
+
+{% block content %}
+    <p>mybooks page</p>
+{% endblock %}
