--- a/libcom/main/templates/main/layout.html
+++ b/libcom/main/templates/main/layout.html
@@ -63,7 +63,9 @@
 
     {% block content %} {% endblock %}
     </div>
-<script src="{% static 'bootstrap/css/bootstrap.min.js' %}"></script>
+    <script src="{% static 'bootstrap/css/bootstrap.min.js' %}"></script>
+    <script src="{% static 'libs/jquery/jquery-3.7.1.min.js' %}"></script>
+    <script src="{% static 'css/script.js' %}"></script>
 </body>
 </html>
 
