--- a/libcom/main/templates/main/layout.html
+++ b/libcom/main/templates/main/layout.html
@@ -65,6 +65,8 @@
     </div>
         <script src="{% static 'bootstrap/js/bootstrap.min.js' %}/"></script>
     <script src="{% static 'libs/jquery/jquery-3.7.1.min.js' %}"></script>
+    <script src="{% static 'libs/jquery/jquery-ui.min.js' %}"></script>
+    <script src="{% static 'libs/apexcharts/apexcharts.min.js' %}"></script>
     <script src="{% static 'css/script.js' %}"></script>
 </body>
 </html>
