--- a/libcom/main/static/css/style.css
+++ b/libcom/main/static/css/style.css
@@ -134,6 +134,10 @@
   margin-left: 20px;
 }
 
+.book-btns div {
+  cursor: pointer;
+}
+
 .search-block {
   display: flex;
   align-items: center;
@@ -237,10 +241,30 @@
   color: black;
 }
 
+.alert-complete {
+  display: none;
+  max-width: 400px;
+  max-height: 70px;
+  top: 130px;
+  right: 20px;
+  z-index: 1;
+  position: fixed;
+}
+
+.alert-svg {
+  max-width: 5%;
+}
 
 .multiple-card-slider .carousel-inner {
   padding: 1em 3em 1em 3em;
 }
+
+.multiple-card-slider .carousel-inner img {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
 .multiple-card-slider .card {
   margin: 0 0.5em;
   box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
