--- a/libcom/mybooks/templates/mybooks/index.html
+++ b/libcom/mybooks/templates/mybooks/index.html
@@ -1,9 +1,103 @@
 {% extends 'main/layout.html' %}
-
 {% block title %} Libcommend {% endblock %}
 
-
-
 {% block content %}
-    <p>mybooks page</p>
+
+<main class="my-books-main">
+  <div class="multiple-card-slider">
+    <div class="books-title">Читаю сейчас</div>
+    <div id="carouselExampleControls" class="carousel" data-bs-ride="false">
+      <div class="carousel-inner gap-2">
+        {% for book in read %}
+        <div class="carousel-item {% if forloop.first %}active{% endif %}">
+          <img src="{{ book.cover }}" alt="{{ book.title }}" />
+        </div>
+        {% endfor %}
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleControls"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+
+  <div class="multiple-card-slider">
+    <div class="books-title">Хочу прочитать</div>
+    <div id="carouselExampleControls2" class="carousel" data-bs-ride="false">
+      <div class="carousel-inner gap-2">
+        {% for book in want %}
+        <div class="carousel-item {% if forloop.first %}active{% endif %}">
+          <img src="{{ book.cover }}" alt="{{ book.title }}" />
+        </div>
+        {% endfor %}
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleControls2"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleControls2"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+  <div class="multiple-card-slider">
+    <div class="d-flex align-items-center gap-4">
+      <div class="books-title">Прочитанное</div>
+      <a href="statistic.html" class="full-statistic">Полная статистика</a>
+    </div>
+    <div id="carouselExampleControls3" class="carousel" data-bs-ride="false">
+      <div class="carousel-inner gap-2">
+        {% for book in complete %}
+        <div class="carousel-item {% if forloop.first %}active{% endif %}">
+          <img src="{{ book.cover }}" alt="{{ book.title }}" />
+        </div>
+        {% endfor %}
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleControls3"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleControls3"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+</main>
+
 {% endblock %}
