--- a/libcom/search/templates/search/index.html
+++ b/libcom/search/templates/search/index.html
@@ -4,64 +4,75 @@
 {% load static %}
 {% block content %}
 
-<main class="search-main">
-        <div class="container">
-            <form action="{% url 'search' %}" method="GET">
-          <div class="search-block">
+<svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+  <symbol id="check-circle-fill" viewBox="0 0 16 16">
+    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+  </symbol>
+  <symbol id="info-fill" viewBox="0 0 16 16">
+    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+  </symbol>
+  <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
+    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+  </symbol>
+</svg>
 
-
-                  <div class="input-group book-search">
-                      <input
-                              type="text"
-                              name="query"
-                              class="form-control"
-                      />
-                      <div class="input-group-append">
-                          <button type="submit"
-                          ><img
-                                  src="{% static 'images/Search.svg' %}"
-                                  alt="Search"
-                                  width="34"
-                                  height="34"
-                          /></button>
-                      </div>
-                  </div>
-
-          </div>
-</form>
-<div class="d-flex flex-wrap flex-column">
-  {% for r in results %}
-
-          <div class="item-book">
-            <div class="main-book-content gap-3">
-              <img src="{{ r.cover }}" alt="Book" />
-              <div class="book-description">
-                <div class="book-title">{{ r.title }}<br></div>
-                <div class="book-authors">{{ r.authors|join:", " }}<br></div>
-              </div>
-              <img class="book-plus" src="{% static 'images/Plus.svg' %}" alt="Plus" />
-            </div>
-            <div class="book-btns">
-              <div>Хочу прочитать</div>
-              <div>Читаю сейчас</div>
-              <div class="add-review-btn" data-bs-toggle="modal" data-bs-target="#addReview-{{ r.isbn }}">
-                Добавить оценку
-              </div>
-            </div>
-          </div>
-
-
-{% include 'mybooks/rating-form.html' %}
-
-          {% endfor %}
-
-
+<div class="alert alert-success align-items-center alert-complete" role="alert">
+  <svg class="bi flex-shrink-0 me-2 alert-svg" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+  <div class="text-alert-input"></div>
 </div>
 
-
-
-
+<main class="search-main">
+  <div class="container">
+    <form action="{% url 'search' %}" method="GET">
+      <div class="search-block">
+        <div class="input-group book-search">
+          <input type="text" name="query" class="form-control" />
+          <div class="input-group-append">
+            <button type="submit">
+              <img
+                src="{% static 'images/Search.svg' %}"
+                alt="Search"
+                width="34"
+                height="34"
+              />
+            </button>
+          </div>
         </div>
-      </main>
+      </div>
+    </form>
+    <div class="d-flex flex-wrap flex-column">
+      {% for r in results %}
+
+      <div class="item-book">
+        <div class="main-book-content gap-3">
+          <img src="{{ r.cover }}" alt="Book" />
+          <div class="book-description">
+            <div class="book-title">{{ r.title }}<br /></div>
+            <div class="book-authors">{{ r.authors|join:", " }}<br /></div>
+          </div>
+          <img
+            class="book-plus"
+            src="{% static 'images/Plus.svg' %}"
+            alt="Plus"
+          />
+        </div>
+        <div class="book-btns">
+          <div class="want-read-btn" data-action="{% url 'mybooks:save_want' r.isbn %}">Хочу прочитать</div>
+          <div class="read-now-btn" data-action="{% url 'mybooks:save_read' r.isbn %}">Читаю сейчас</div>
+          <div
+            class="add-review-btn"
+            data-bs-toggle="modal"
+            data-bs-target="#addReview-{{ r.isbn }}"
+          >
+            Добавить оценку
+          </div>
+        </div>
+      </div>
+
+      {% include 'mybooks/rating-form.html' %} 
+      {% endfor %}
+    </div>
+  </div>
+</main>
 
 {% endblock %}
