Creating main app

--- a/libcom/search/templates/search/index.html
+++ b/libcom/search/templates/search/index.html
@@ -23,6 +23,11 @@
 
 <main class="search-main">
   <div class="container">
+
+    <div>
+      {{ logs }}
+    </div>
+
     <form action="{% url 'search' %}" method="GET">
       <div class="search-block">
         <div class="input-group book-search">
