--- a/libcom/main/templates/main/index.html
+++ b/libcom/main/templates/main/index.html
@@ -15,8 +15,8 @@
 {% block content %}
     <main class="book-main">
         <div>
-          <h1>Приветственная надпись</h1>
-          <p class="lead">Описание проекта</p>
+          <h1>Пора почитать</h1>
+          <p class="lead">Ищите и добавляйте книги в свой read-list</p>
             <div class="input-group book-search">
                 <form action="{% url 'search' %}" method="GET" class="input-group d-flex align-items-center">
                     <input type="text" name="query" class="form-control" placeholder="Введите ваш запрос">
