--- a/libcom/main/templates/main/user-info.html
+++ b/libcom/main/templates/main/user-info.html
@@ -8,7 +8,10 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">Настройки</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="users/logout">Выйти</a>
+            <form action="{% url 'users:logout' %}" method="post" class="dropdown-item p-0 m-0">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-link dropdown-item" style="width: 100%; text-align: left;">Выйти</button>
+            </form>
         </div>
     </li>
 </ul>
