--- a/libcom/main/templates/main/layout.html
+++ b/libcom/main/templates/main/layout.html
@@ -21,7 +21,7 @@
 </head>
 <body class="d-flex h-100">
     <div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
-      <header class="mb-auto">
+      <header>
         <nav
           id="book-nav"
           class="navbar navbar-expand-lg"
@@ -60,8 +60,9 @@
           </div>
         </nav>
       </header>
-
-    {% block content %} {% endblock %}
+        <div  class="py-2">
+            {% block content %} {% endblock %}
+        </div>
     </div>
         <script src="{% static 'bootstrap/js/bootstrap.min.js' %}/"></script>
     <script src="{% static 'libs/jquery/jquery-3.7.1.min.js' %}"></script>
