--- a/libcom/main/templates/main/user-form.html
+++ b/libcom/main/templates/main/user-form.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="loginModalLabel">Login/Registration</h5>
+                <h5 class="modal-title" id="loginModalLabel">Вход и регистрация</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -61,7 +61,7 @@
                               </div>
                             {% endfor %}
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                              <input type="submit" value="Зарегистрироваться" class="btn user-btn">
+                              <input type="submit" value="Регистрация" class="btn user-btn">
                             </div>
 
                         </form>
