--- a/libcom/users/templates/users/signup.html
+++ b/libcom/users/templates/users/signup.html
@@ -4,32 +4,38 @@
 
 {% block content %}
 
-    {% for message in messages %}
-    <small class="form-text text-danger">{{ message }}</small>
-    {% endfor %}
-    <div class="margin-20px">
-        <form method="POST" action="{% url 'users:signup' %}">
+    <div class="d-flex justify-content-center align-items-center vh-100">
+    <div class="p-4 shadow rounded bg-white" style="width: 400px;">
 
-            {% for f in signup_form %}
-            {{ f.id_for_label }}
+        <!-- Сообщения об ошибках -->
+        {% for message in messages %}
+        <small class="form-text text-danger d-block text-center mb-3">{{ message }}</small>
+        {% endfor %}
+
+        {% if form.non_field_errors %}
+          <div class="text-danger mb-3">
+            {% for error in form.non_field_errors %}
+              <small>{{ error }}</small><br>
             {% endfor %}
+          </div>
+        {% endif %}
 
+        <form method="POST" action="{% url 'users:signup' %}" class="text-center">
             {% csrf_token %}
-            <br>
             <input type="hidden" name="next" value="{{ next }}" />
+
             {% for f in signup_form %}
-            <div class="mb-3 row">
-                <label for="{{ f.id_for_label }}" class="col-sm-2 col-form-label">{{ f.label }}</label>
-                <div class="col-sm-10">
-                    {{ f }}
-                </div>
-                <div class="form-error">{{ f.errors }}</div>
-              </div>
-            {% endfor %}
-            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-              <input type="submit" value="Зарегистрироваться" class="btn btn-primary me-md-2">
+            <div class="mb-3">
+                <label for="{{ f.id_for_label }}" class="form-label">{{ f.label }}</label>
+                {{ f }}
+                <div class="text-danger small">{{ f.errors }}</div>
             </div>
+            {% endfor %}
+
+            <input type="hidden" name="action" value="login">
+            <button type="submit" class="btn user-btn w-100">Регистрация</button>
         </form>
     </div>
+</div>
 
 {% endblock %}
