--- a/libcom/main/templates/main/layout.html
+++ b/libcom/main/templates/main/layout.html
@@ -60,7 +60,7 @@
           </div>
         </nav>
       </header>
-        <div  class="py-2">
+        <div  class="block-content py-2  h-100 flex-grow-1 d-flex flex-column">
             {% block content %} {% endblock %}
         </div>
     </div>
